--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "cookies-next": "^2.1.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "next-auth": "^4.18.6",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.1",
+    "sass": "^1.56.2"
   }
 }
