--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "prettier": "^2.8.1",
